--- a/config/install/code_challenge.codechallenge.yml
+++ b/config/install/code_challenge.codechallenge.yml
@@ -1,3 +1,3 @@
 code_challenge:
-  api_endpoint: 'https://raw.githubusercontent.com/chensihai/code_challenge/master/tests/data4test.json'; //return data like in file /tests/data4test.txt
+  api_endpoint: 'https://raw.githubusercontent.com/chensihai/code_challenge/master/tests/data4test.json'  #return data like in file /tests/data4test.txt
   meta_message: 'Acmcme sports name list'
